Recruiting Model/main/default/objects/Company_Location__c/Company_Location__c.object-meta.xml
<CustomObject>
    <description>Master Company Location object</description>
    <label>Company Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>