Recruiting Model/main/default/objects/Company_Location__c/fields/Construction_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Start_Date__c</fullName>
    <label>Construction Start Date</label>
    <type>DateTime</type>
</CustomField>