Recruiting Model/main/default/objects/Company_Location__c/fields/Location_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Location_Geolocation__c</fullName>
    <label>Location Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>