Recruiting Model/main/default/objects/Company_Location__c/fields/Main_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Phone__c</fullName>
    <label>Main Phone</label>
    <type>Phone</type>
</CustomField>