Recruiting Model/main/default/objects/Company_Location__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <label>Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>