Recruiting Model/main/default/objects/Company_Location__c/fields/Parent_Location__c.field-meta.xml
<CustomField>
    <fullName>Parent_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the parent company location (if applicable)</inlineHelpText>
    <label>Parent Location</label>
    <referenceTo>Company_Location__c</referenceTo>
    <relationshipLabel>Company Locations</relationshipLabel>
    <relationshipName>Company_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>