Recruiting Model/main/default/objects/Company_Location__c/fields/Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>Possession_Date__c</fullName>
    <label>Possession Date</label>
    <type>Date</type>
</CustomField>