Recruiting Model/main/default/objects/Company_Location__c/fields/Remodel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Remodel_End_Date__c</fullName>
    <label>Remodel End Date</label>
    <type>Date</type>
</CustomField>