Recruiting Model/main/default/objects/Company_Location__c/fields/Remodel_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Remodel_Start_Date__c</fullName>
    <label>Remodel Start Date</label>
    <type>Date</type>
</CustomField>