Recruiting Model/main/default/objects/Company_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Street_Address__c</columns>
    <columns>State__c</columns>
    <columns>Main_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>